--- a/07-Backend-MVC/CarritoCompras/views/busquedaArxiv.ejs
+++ b/07-Backend-MVC/CarritoCompras/views/busquedaArxiv.ejs
@@ -1,4 +1,9 @@
-
+<input
+  class="form-control"
+  type="text"
+  id="idUsuario"
+  name="idUsuario"
+  value="<%=req.cookies.User%>">
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/
 xhtml1/DTD/xhtml1-transitional.dtd">
 <html lang="es-Es" xmlns="http://www.w3.org/1999/xhtml">
@@ -197,6 +202,7 @@ xhtml1/DTD/xhtml1-transitional.dtd">
             cate='General';
             language = 'EN/ES';
             country = '';
+            fkIdUser=parseInt(document.getElementById("idUsuario").value);
 
             for (var j = 0; j < 10; j++) {
               if (typeof libro.getElementsByTagName("arxiv:comment")[0]!== 'undefined') {
@@ -525,6 +531,7 @@ xhtml1/DTD/xhtml1-transitional.dtd">
               "<input hidden type='text' name='apellidoAuthores2' value='" + apellido2 + "'>" +
               "<input hidden type='text' name='nombreAuthores3' value='" + nombreA3 + "'>" +
               "<input hidden type='text' name='apellidoAuthores3' value='" + apellido3 + "'>" +
+              "<input hidden type='text' name='fkIdUser' value='" + parseInt(fkIdUser) + "'>" +
               "<input hidden type='number' name='numero_autores' value='" + tamAut + "'>" +
               "<input hidden type='text' name='category' value='" + cate + "'>" +
               "<input hidden type='text' name='pages' value='" + pages + "'>" +
