--- a/07-Backend-MVC/CarritoCompras/views/UsuarioGestion/login.ejs
+++ b/07-Backend-MVC/CarritoCompras/views/UsuarioGestion/login.ejs
@@ -1,5 +1,5 @@
 <h1>Login</h1>
-<form action="/login" method="post">
+<form action="/VerUsuario" method="get">
 
   <label for="email">Your email address?</label>
   <input name="email" type="text"/>
