--- a/07-Backend-MVC/CarritoCompras/views/busquedaRecomendador.ejs
+++ b/07-Backend-MVC/CarritoCompras/views/busquedaRecomendador.ejs
@@ -1,4 +1,9 @@
-
+<input
+  class="form-control"
+  type="text"
+  id="idUsuario"
+  name="idUsuario"
+  value="<%=req.cookies.User%>">
 <!DOCTYPE html>
 <html lang="en">
 <head>
