--- a/07-Backend-MVC/CarritoCompras/views/header.ejs
+++ b/07-Backend-MVC/CarritoCompras/views/header.ejs
@@ -2,7 +2,7 @@
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="navbar-brand" href="/"><h5>EPN SEARCH</h5></a>
+  <a class="navbar-brand" href="/logout"><h5>EPN SEARCH</h5></a>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
@@ -22,11 +22,18 @@
       <li class="nav-item active">
         <a class="nav-link" href="/busqueda"><h5>Busqueda</h5> </a>
       </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="/biblioteca"><h5>Biblioteca</h5> </a>
+      <li class="dropdown">
+        <a class="nav-link" data-toggle="dropdown" href="/bibliotecaUser"><h5>Biblioteca</h5> <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li class="nav-item active"><a class="nav-link" href="/bibliotecaUser">Biblioteca</a></li>
+          <li class="nav-item active"><a class="nav-link"  href="/mibiblioteca">Añadidos por mí</a></li>
+        </ul>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="/crearMisArticulos"><h5>Crear mis articulos </h5></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/logout"><h5>Salir </h5></a>
       </li>
     </ul>
   </div>
