--- a/07-Backend-MVC/CarritoCompras/views/homepage.ejs
+++ b/07-Backend-MVC/CarritoCompras/views/homepage.ejs
@@ -3,7 +3,12 @@
 <br>
 <br>
 <form action="/Saludo/crearMiArticulo" method="post">
-
+  <input
+    class="form-control"
+    type="number"
+    id="idUsuario"
+    name="idUsuario"
+    value="<%=req.cookies.User%>">
 
   <div class="form-group row">
 
@@ -16,6 +21,7 @@
              placeholder="Enter the title"
              id="title"
              name="title"
+             required
 
       >
 
@@ -37,7 +43,9 @@
     <label for="number" class="col-2 col-form-label"><h5><b>Number</b></h5></label>
     <div class="col-10">
       <input class="form-control" type="text" placeholder="Enter the number" id="number"
-             name="number">
+             name="number"
+             required
+      >
     </div>
   </div>
 
@@ -46,7 +54,9 @@
     <div class="col-10">
       <input class="form-control" type="text" placeholder="Enter the volume"
              name="volume"
-             id="volume">
+             id="volume"
+             required
+      >
     </div>
   </div>
 
@@ -56,9 +66,35 @@
     <div class="col-10">
       <input class="form-control" type="text" placeholder="Enter the date"
              name="year"
-             id="year">
+             id="year"
+             required
+      >
     </div>
   </div>
+
+  <div class="form-group row">
+    <label for="journal" class="col-2 col-form-label"><h5><b>Journal</b></h5></label>
+    <div class="col-10">
+      <input class="form-control" type="text" placeholder="Ingrese el nombre de la revista"
+             name="journal"
+             id="journal"
+             required
+      >
+    </div>
+  </div>
+
+  <div class="form-group row">
+    <label for="editorial" class="col-2 col-form-label"><h5><b>Editorial</b></h5></label>
+    <div class="col-10">
+      <input class="form-control" type="text" placeholder="Ingrese el nombre de la revista"
+             name="editorial"
+             id="editorial"
+             required
+      >
+    </div>
+  </div>
+
+
   <div class="form-group row">
     <label for="abstract" class="col-2 col-form-label"><h5><b>Abstract</b></h5></label>
     <div class="col-10">
@@ -86,7 +122,8 @@
     <div class="col-10">
       <input class="form-control" type="text" placeholder="Enter the language in which your article is written"
              name="language"
-             id="language">
+             id="language"
+             required>
     </div>
   </div>
 
@@ -95,7 +132,9 @@
     <div class="col-10">
       <input class="form-control" type="text" placeholder="Enter the keywords of your article"
              name="keywords"
-             id="keywords">
+             id="keywords"
+
+      >
     </div>
   </div>
 
@@ -109,20 +148,291 @@
   </div>
 
   <div class="form-group row">
-    <label for="author" class="col-2 col-form-label"><h5><b>Author</b></h5></label>
     <div class="col-10">
-      <input class="form-control" type="text" placeholder="Enter the authors"
-             name="authors"
-             id="authors">
+      <input hidden class="form-control" name="authors" id="authors">
     </div>
   </div>
+
+  <div class="form-group row">
+    <label for="nombreA" class="col-2 col-form-label"><h5><b>Nombre Autor</b></h5></label>
+    <div class="col-4">
+      <input class="form-control" type="text" placeholder="Ingrese el nombre del autor"
+             name="nombreA"
+             id="nombreA"
+             required
+             onkeyup="validar();">
+    </div>
+    <label for="apellido" class="col-2 col-form-label"><h5><b>Apellido Autor</b></h5></label>
+    <div class="col-4">
+      <input class="form-control" type="text" placeholder="Ingrese el apellido del autor"
+             name="apellido"
+             id="apellido"
+             required
+             onkeyup="validar();">
+    </div>
+  </div>
+
+  <div id='oculto' style='display:none;'>
+      <input type="button" class="btn btn-info" value="-" onclick="ocultar(); limpiar1()">
+      <br>
+
+    <div class="form-group row">
+      <label for="nombreA1" class="col-2 col-form-label"><h5><b>Nombre Autor2</b></h5></label>
+      <div class="col-4">
+        <input class="form-control" type="text" placeholder="Ingrese el nombre del autor"
+               name="nombreA1"
+               id="nombreA1"
+               onkeyup="validar1();">
+      </div>
+      <label for="apellido1" class="col-2 col-form-label"><h5><b>Apellido Autor2</b></h5></label>
+      <div class="col-4">
+        <input class="form-control" type="text" placeholder="Ingrese el nombre del autor"
+               name="apellido1"
+               id="apellido1"
+               onkeyup="validar1();">
+      </div>
+    </div>
+
+    <input type="button" style='display:none' class="btn btn-info" id="catego2" value="+" onclick="mostrar1()" disabled=true>
+
+  </div>
+
+  <div id='oculto2' style='display:none;'>
+
+    <input type="button" class="btn btn-info" value="-" onclick="ocultar1();limpiar2()">
+    <br>
+    <div class="form-group row">
+      <label for="nombreA2" class="col-2 col-form-label"><h5><b>Nombre Autor3</b></h5></label>
+      <div class="col-4">
+        <input class="form-control" type="text" placeholder="Ingrese el nombre del autor"
+               name="nombreA2"
+               id="nombreA2"
+               onkeyup="validar2();">
+      </div>
+      <label for="apellido2" class="col-2 col-form-label"><h5><b>Apellido Autor3</b></h5></label>
+      <div class="col-4">
+        <input class="form-control" type="text" placeholder="Ingrese el nombre del autor"
+               name="apellido2"
+               id="apellido2"
+               onkeyup="validar2();">
+      </div>
+    </div>
+    <input type="button" style='display:none' class="btn btn-info" id="catego3" value="+" onclick="mostrar2()" disabled=true>
+  </div>
+
+  <div id='oculto3' style='display:none;'>
+
+    <input type="button" class="btn btn-info" value="-" onclick="ocultar2();limpiar3()">
+    <br>
+    <div class="form-group row">
+      <label for="nombreA3" class="col-2 col-form-label"><h5><b>Nombre Autor4</b></h5></label>
+      <div class="col-4">
+        <input class="form-control" type="text" placeholder="Ingrese el nombre del autor"
+               name="nombreA3"
+               id="nombreA3"
+               >
+      </div>
+      <label for="apellido3" class="col-2 col-form-label"><h5><b>Apellido Autor4</b></h5></label>
+      <div class="col-4">
+        <input class="form-control" type="text" placeholder="Ingrese el nombre del autor"
+               name="apellido3"
+               id="apellido3"
+               >
+      </div>
+    </div>
+  </div>
+
+  <input type="button" style='display:none;'class="btn btn-info" id="catego" value="+" onclick="mostrar()" disabled=true>
+  <br>
+  <br>
+
+  <script type="text/javascript">
+
+
+    function mostrar(){
+      document.getElementById('oculto').style.display = 'block';
+      document.getElementById('catego').style.display = 'none';
+
+    }
+
+    function mostrar1(){
+      document.getElementById('oculto2').style.display = 'block';
+      document.getElementById('catego2').style.display = 'none';
+    }
+    function mostrar2(){
+      document.getElementById('oculto3').style.display = 'block';
+      document.getElementById('catego3').style.display = 'none';
+    }
+
+    function ocultar(){
+      document.getElementById('oculto').style.display = 'none';
+      document.getElementById('oculto2').style.display = 'none';
+      document.getElementById('oculto3').style.display = 'none';
+      document.getElementById('catego').style.display = 'block';
+
+    }
+    function ocultar1(){
+      document.getElementById('oculto2').style.display = 'none';
+      document.getElementById('oculto3').style.display = 'none';
+      document.getElementById('catego2').style.display = 'block';
+
+    }
+    function ocultar2(){
+      document.getElementById('oculto3').style.display = 'none';
+      document.getElementById('catego3').style.display = 'block';
+
+    }
+
+    function validar(){
+      var text7 = document.getElementById("nombreA");
+      var text8 = document.getElementById("apellido");
+
+
+      if(text7.value != "" && text8.value != ""){
+        document.getElementById("catego").disabled = false;
+        document.getElementById("catego").style.display = 'block';
+
+
+      }else{
+        document.getElementById('oculto').style.display = 'none';
+        document.getElementById('oculto2').style.display = 'none';
+        document.getElementById('oculto3').style.display = 'none';
+        document.getElementById("catego").disabled = true;
+
+      }
+
+    }
+
+    function validar1(){
+      var text7 = document.getElementById("nombreA");
+      var text8 = document.getElementById("apellido");
+      var text1 = document.getElementById("nombreA1");
+      var text2 = document.getElementById("apellido1");
+
+
+      if(text1.value != "" && text2.value != ""){
+
+        document.getElementById("catego2").disabled = false;
+        document.getElementById("catego2").style.display = 'block';
+        document.getElementById("catego").style.display = 'none';
+
+      }else{
+        document.getElementById('oculto2').style.display = 'none';
+        document.getElementById('oculto3').style.display = 'none';
+        document.getElementById("catego2").disabled = true;
+      }
+
+    }
+
+    function validar2(){
+
+      var text7 = document.getElementById("nombreA");
+      var text8 = document.getElementById("apellido");
+      var text1 = document.getElementById("nombreA1");
+      var text2 = document.getElementById("apellido1");
+      var text3 = document.getElementById("nombreA2");
+      var text4 = document.getElementById("apellido2");
+
+
+      if(text3.value != "" && text4.value != ""){
+        document.getElementById("catego3").style.display = 'block';
+        document.getElementById("catego3").disabled = false;
+
+      }else{
+        document.getElementById('oculto3').style.display = 'none';
+        document.getElementById("catego3").disabled = true;
+
+      }
+
+    }
+
+    function Autores(){
+      var text7 = document.getElementById("nombreA");
+      var text8 = document.getElementById("apellido");
+      var text1 = document.getElementById("nombreA1");
+      var text2 = document.getElementById("apellido1");
+      var text3 = document.getElementById("nombreA2");
+      var text4 = document.getElementById("apellido2");
+      var text5 = document.getElementById("nombreA3");
+      var text6 = document.getElementById("apellido3");
+
+      var Nombre1 = text7.value+' '+text8.value;
+      var Nombre2 = text1.value+' '+text2.value
+      var Nombre3 = text3.value+' '+text4.value
+      var Nombre4 = text5.value+' '+text6.value
+
+      if(Nombre1!= ' '&&Nombre2==' '&&Nombre3==' '&&Nombre4==' '){
+        var autor1= text7.value +' '+ text8.value;
+        var autores =[autor1];
+        document.getElementById("authors").value = autor1;
+
+      }
+      if(Nombre1!= ' '&&Nombre2!=' '&&Nombre3==' '&&Nombre4==' '){
+        var autor1= text7.value +' '+ text8.value;
+        var autor2= text1.value +' '+ text2.value;
+        var autores =[autor1,autor2];
+        document.getElementById("authors").value = autor1+'; '+autor2;
+      }
+      if(Nombre1!= ' '&&Nombre2!=' '&&Nombre3!=' '&&Nombre4==' '){
+        var autor1= text7.value +' '+ text8.value;
+        var autor2= text1.value +' '+ text2.value;
+        var autor3= text3.value +' '+ text4.value;
+        var autores =[autor1,autor2,autor3];
+        document.getElementById("authors").value = autor1+'; '+autor2+'; '+autor3;
+      }
+      if(Nombre1!= ' '&&Nombre2!=' '&&Nombre3!=' '&&Nombre4!=' '){
+        var autor1= text7.value +' '+ text8.value;
+        var autor2= text1.value +' '+ text2.value;
+        var autor3= text3.value +' '+ text4.value;
+        var autor4= text5.value +' '+ text6.value;
+        var autores =[autor1,autor2,autor3,autor4];
+        document.getElementById("authors").value = autor1+'; '+autor2+'; '+autor3+'; '+autor4;
+      }
+      tamAutap=autores.length;
+      console.log("tamaño:",tamAutap);
+      console.log("autores", autor1+' '+autor2+' '+autor3+' '+autor4);
+
+    }
+
+
+
+    function limpiar1(){
+      document.getElementById("nombreA1").value = "";
+      document.getElementById("apellido1").value = "";
+    }
+    function limpiar2(){
+      document.getElementById("nombreA2").value = "";
+      document.getElementById("apellido2").value = "";
+    }
+    function limpiar3(){
+      document.getElementById("nombreA3").value = "";
+      document.getElementById("apellido3").value = "";
+    }
+
+  </script>
+
+
 
   <div class="form-group row">
     <label for="category" class="col-2 col-form-label"><h5><b>Category</b></h5></label>
     <div class="col-10">
       <input class="form-control" type="text" placeholder="What category does your article belong to"
              name="category"
-             id="category">
+             id="category"
+             required
+      >
+    </div>
+  </div>
+
+  <div class="form-group row">
+    <label for="author" class="col-2 col-form-label"><h5><b>Página inicio</b></h5></label>
+    <div class="col-4">
+      <input class="form-control" type="text" placeholder="Ingrese el Num. página de inicio" name="starpage" id="starpage" required>
+    </div>
+    <label for="author" class="col-2 col-form-label"><h5><b>Página final</b></h5></label>
+    <div class="col-4">
+      <input class="form-control" type="text" placeholder="Ingrese el Num. página de fi" name="endpage" id="endpage" required>
+
     </div>
   </div>
 
@@ -139,9 +449,10 @@
     </div>
   </div>
 
+  <input type="button" class="btn btn-info"  value="Guardar información">
 
   <button
-    class="btn btn-outline-success">Save</button>
+    onclick="Autores()" class="btn btn-outline-success">Save</button>
 
   <button type="reset"
           class="btn btn-outline-warning">Reset</button>
